# grep-ultra-lite

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
