[package]
name = "grep-ultra-lite"
version = "0.1.0"
edition = "2021"
description = "A basic grep alternative"
repository = "https://github.com/Joxtacy/grep-ultra-lite"
homepage = "https://github.com/Joxtacy/grep-ultra-lite"
categories = ["command-line-interface", "text-processing"]
keywords = [
  "regex",
  "grep",
  "search",
  "pattern",
]
license = "MIT"
license-file = "LICENSE"

[[bin]]
name = "rgl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
colored = "2.0.0"
regex = "1.7.2"
